<resources>
    <string name="app_name">NFC authentication</string>
    <string name="home_fragment">Work in progress</string>

    <string name="begin_text">READ ID CARD</string>
    <string name="next_text">NEXT</string>
    <string name="cancel_text">CANCEL</string>
    <string name="save_text">SAVE</string>
    <string name="deny_text">NO</string>
    <string name="return_text">BACK</string>

    <!-- string resources for HomeFragment -->
    <string name="pin_status_saved">PIN 1 saved</string>
    <string name="pin_status_negative">PIN 1 not saved</string>
    <string name="can_status_saved">CAN saved</string>
    <string name="can_status_negative">CAN not saved</string>

    <!-- string resources for PinFragment -->
    <string name="pin_fragment">Please enter PIN 1</string>
    <string name="enter_pin">PIN 1</string>
    <string name="example_pin">Example. 1234</string>
    <string name="length_pin">Allowed length for PIN 1 is 4..12</string>
    <string name="pin_save_request">PIN 1 is currently not saved. Do you wish to save the entered PIN 1? Saved PIN 1 will be entered automatically in the future. Saved PIN 1 can be changed and deleted in the settings menu.</string>
    <string name="save_pin_title">Save PIN 1</string>

    <!-- string resources for Pin2Fragment -->
    <string name="pin2_fragment">Please enter PIN 2</string>
    <string name="enter_pin2">PIN 2</string>
    <string name="example_pin2">Example. 123456</string>
    <string name="length_pin2">Allowed length for PIN 2 is 5..12</string>

    <!-- string resources for CanFragment -->
    <string name="example_can">Example. 123456</string>
    <string name="text_can">CAN</string>
    <string name="enter_can">Enter ID card\'s CAN (Card Access Number)</string>
    <string name="length_can">Length of the CAN is wrong</string>
    <string name="card_detected">Card detected. Hold it against the phone.</string>
    <string name="data_read">Data read. You can continue.</string>
    <string name="can_save_request">CAN is currently not saved. Do you wish to save the CAN? Saved CAN will be entered automatically in the future. Saved CAN can be changed and deleted in the settings menu.</string>
    <string name="save_can_title">Save CAN</string>

    <!-- string resources for AuthFragment layout -->
    <string name="auth_instruction_text">Put the ID card against the phone</string>
    <string name="time_left">Time left %d sek</string>
    <string name="no_time">No time left</string>
    <string name="no_success">Wrong CAN</string>

    <!-- string resources for UserFragment layout -->
    <string name="user_name_label">NAME</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="identification_number_label">IDENTIFICATION NUMBER</string>
    <string name="expiration_label">DATE OF EXPIRY</string>
    <string name="citizenship_label">CITIZENSHIP</string>
    <string name="gender_label">SEX</string>
    <string name="clear_button">FORGET</string>

    <!-- string resources for ResultFragment layout-->
    <string name="result_text">Controlling the created token</string>
    <string name="result_info">Wait for the app to close</string>

    <!-- menu -->
    <string name="menu_settings_title">Settings</string>
    <string name="menu_language_title">Language</string>
    <string name="menu_action_unavailable">Currently unavailable</string>
    <string name="saved_can">CAN: %s</string>
    <string name="can_add">Add CAN</string>
    <string name="can_delete">Delete CAN</string>
    <string name="saved_pin">PIN1: %s</string>
    <string name="pin1_add">Add PIN 1</string>
    <string name="pin1_delete">Delete PIN 1</string>
    <string name="missing">not saved</string>
    <string name="show">SHOW</string>
    <string name="hide">HIDE</string>
    <string name="hidden_pin">****</string>
    <string name="unavailable">Settings currently unavailable</string>

    <!-- TEMPORARY SOLUTION -->
    <string name="can_view">Please enter CAN</string>
    <string name="hint">CAN</string>
    <string name="button_cancel">Cancel</string>
    <string name="helper">CAN must be 6 digits long</string>
    <string name="can_saved">CAN saved</string>
    <string name="action_undo">UNDO</string>
    <string name="pin_view">Please enter PIN 1</string>
    <string name="hint_pin">PIN 1</string>
    <string name="helper_pin">PIN 1 must be 4–12 digits long</string>
    <string name="save_pin">Save PIN 1</string>
    <string name="pin_saved">PIN saved</string>
    <string name="pin_save_on">On</string>
    <string name="pin_save_off">Off</string>
    <string name="continue_button">CONTINUE</string>

    <!-- TEMPORARY HOME FRAGMENT STRINGS -->
    <string name="action_detect">Put the ID card against the phone to detect it</string>
    <string name="action_detect_unavailable">CAN must be added before ID card can be detected</string>
    <string name="nfc_not_available">NFC is not turned on or is not supported by the phone</string>
    <string name="nfc_reading_error">The provided CAN does not match the ID card</string>
    <string name="id_card_removed_early">ID card was removed too early</string>
    <string name="try_again">Try Again</string>
    <string name="wrong_pin">Wrong PIN 1. Tries on the card left %s</string>
</resources>