<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:text="@string/can_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/headline_text"
        android:layout_margin="@dimen/margin_big"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/canTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:hint="@string/hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:helperTextEnabled="true"
        app:helperText="@string/helper"
        app:helperTextTextAppearance="@style/helper"
        app:counterEnabled="true"
        app:counterMaxLength="6"
        app:counterTextAppearance="@style/helper"
        app:counterOverflowTextAppearance="@style/helper"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/regular_text"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:singleLine="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_cancel"
        android:text="@string/button_cancel"
        android:textSize="@dimen/regular_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_big"
        android:fontFamily="sans-serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/canTextField" />

</androidx.constraintlayout.widget.ConstraintLayout>