<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding"
    tools:context=".AuthFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/stroke_color"
        app:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">

            <TextView
                android:id="@+id/auth_fragment_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:gravity="left"
                android:text="@string/auth_instruction_text"
                android:textSize="@dimen/regular_text" />

            <ImageView
                android:id="@+id/nfc_logo"
                android:layout_width="@dimen/logo_big"
                android:layout_height="@dimen/logo_big"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin"
                android:padding="@dimen/margin_huge"
                android:src="@drawable/nfc_logo" />

            <TextView
                android:id="@+id/time_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/regular_text"
                app:layout_constraintTop_toBottomOf="@id/auth_fragment_instruction"
                tools:text="@string/time_left" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <!-- later there will be no button, but the app will continue automatically -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:text="@string/next_text"
        android:textSize="@dimen/regular_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big"
        android:layout_marginStart="@dimen/padding_tiny"
        android:text="@string/cancel_text"
        android:textSize="@dimen/regular_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>