<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding"
    tools:context=".menu.SettingsFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/stroke_color"
        app:cardElevation="0dp">
        <LinearLayout
            android:id="@+id/can_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_small">
            <TextView
                android:id="@+id/can_saved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_text"
                android:padding="@dimen/margin_small"
                android:text="@string/saved_can" />
            <Button
                android:id="@+id/can_menu_action"
                android:layout_margin="@dimen/margin_small"
                android:textSize="@dimen/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/pin_saved"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/regular_text"
                android:padding="@dimen/margin_small"
                android:text="@string/saved_pin"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/pin_menu_show"
                    android:layout_marginHorizontal="@dimen/margin"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:textSize="@dimen/regular_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <Button
                    android:id="@+id/pin_menu_action"
                    android:layout_marginHorizontal="@dimen/margin"
                    android:layout_marginVertical="@dimen/margin_small"
                    android:textSize="@dimen/regular_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_text"
        android:layout_marginVertical="@dimen/margin"
        android:layout_marginStart="@dimen/padding"
        android:textSize="@dimen/regular_text"
        app:layout_constraintTop_toBottomOf="@id/settings_card"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>